--- a/src/component/Todo/Todo.module.css
+++ b/src/component/Todo/Todo.module.css
@@ -11,12 +11,15 @@
     width: 1.5rem;
     height: 1.5rem;
 }
-
+input:checked + label{
+    color:var(--color-accent);
+    text-decoration: line-through;
+}
 .text{
     flex:1 1 auto;
     margin-left: 0.5rem;
     font-size: 1.5rem;
-
+    
 }
 
 .icon{
