--- a/src/component/AddTodo/AddTodo.module.css
+++ b/src/component/AddTodo/AddTodo.module.css
@@ -1,12 +1,12 @@
 .form{
     width:100%;
     display: flex;
-    padding: 1.4rem 1rem;
+    padding: 1rem;
     background-color: var(--color--bg-dark);
 }
 
 .input{
-    flex:1 0 auto;
+    flex:1 1 auto;
     font-size: 1.4rem;
     padding:0.7rem 1rem;
     border:none;
