--- a/src/component/AddTodo/AddTodo.module.css
+++ b/src/component/AddTodo/AddTodo.module.css
@@ -20,7 +20,7 @@
     color:var(--color-white);
     font-weight: bold;
     font-size: 1.4rem;
-    padding: 0 auto;
+    padding: 0 2rem;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
 }
